@@ -3,6 +3,7 @@
 S3method(as.binary,phylo)
 S3method(as.data.frame,phylo)
 S3method(fortify,beast)
+S3method(fortify,codeml)
 S3method(fortify,codeml_mlc)
 S3method(fortify,jplace)
 S3method(fortify,paml_rst)
@@ -66,6 +67,7 @@ importFrom(ape,reorder.phylo)
 importFrom(ape,write.tree)
 importFrom(ggplot2,"%+replace%")
 importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
 importFrom(ggplot2,annotate)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,coord_polar)
