@@ -1,9 +1,10 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/beast.R, R/codeml_mlc.R, R/jplace.R, R/paml_rst.R
+% Please edit documentation in R/AllGenerics.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/jplace.R, R/paml_rst.R
 \docType{methods}
 \name{get.fields}
 \alias{get.fields}
 \alias{get.fields,beast-method}
+\alias{get.fields,codeml-method}
 \alias{get.fields,codeml_mlc-method}
 \alias{get.fields,jplace,ANY-method}
 \alias{get.fields,paml_rst-method}
@@ -12,6 +13,8 @@
 get.fields(object, ...)
 
 \S4method{get.fields}{beast}(object, ...)
+
+\S4method{get.fields}{codeml}(object)
 
 \S4method{get.fields}{codeml_mlc}(object)
 
