@@ -1,14 +1,17 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/beast.R, R/codeml_mlc.R, R/jplace.R, R/paml_rst.R
+% Please edit documentation in R/beast.R, R/codeml.R, R/codeml_mlc.R, R/jplace.R, R/paml_rst.R
 \docType{methods}
 \name{show,beast-method}
 \alias{show}
 \alias{show,beast-method}
+\alias{show,codeml-method}
 \alias{show,codeml_mlc-method}
 \alias{show,paml_rst-method}
 \title{show method}
 \usage{
 \S4method{show}{beast}(object)
+
+\S4method{show}{codeml}(object)
 
 \S4method{show}{codeml_mlc}(object)
 
